# testnet

./: .dockerignore  .gitignore  .goreleaser.yml  LICENSE  README.md  cert-manager.yaml  dsweb.yaml  envoy-grpc-proxy.yaml  go.mod  go.sum  placeholder-deployments.yaml  placeholder-ingress.yaml  placeholder-namespace.yaml  placeholder-services.yaml  placeholder.yaml  skaffold.yaml  trisa.ingress.yaml  trisa.namespace.yaml  trisads.yaml  vasp_integration.md
.github/workflows/: containers.yml  release.yml  tests.yml
cmd/certs/: main.go
cmd/debug/: main.go
cmd/openvasp/: main.go
cmd/rvasp/: main.go
cmd/sectigo/: main.go
cmd/trisads/: main.go
containers/: README.md  build.sh  docker-compose.yml
containers/db/: Dockerfile
containers/docs/: Dockerfile
containers/docs-redirect/: Dockerfile  nginx.conf
containers/dsweb/: Dockerfile
containers/grpc-proxy/: envoy.yaml
containers/openvasp/: Dockerfile
containers/rvasp/: Dockerfile  rebuild.sh
containers/trisads/: Dockerfile
db/: db.tgz
docs/: config.toml
docs/content/: _index.md
lib/rvaspy/: .gitignore  MANIFEST.in  setup.cfg
lib/rvaspy/rvaspy/: api_pb2.py  api_pb2_grpc.py  client.py
manifests/: README.md  cert-manager.yaml  docs.yaml  dsweb.yaml  namespaces.yaml  placeholder.yaml  trisa.routes.yaml  trisads.yaml
manifests/demo/: alice.yaml  bob.yaml  (+2 more)
pkg/: version.go
placeholder/: docker-compose.yml
scripts/: gds-fixture.py  generate-fixtures.sh  go-executable-build.sh  reset-db.sh  rvasp-test.sh  rvasp.py
traefik/: chart-values.yaml  dashboard.yaml  traefik-config.configmap.yaml
(+242 files in other folders)
