[metadata]
description-file = README.md

[tool:pytest]
addopts = --cov=rvaspy --flakes
python_files = tests/*
flakes-ignore =
    __init__.py UnusedImport
    __init__.py ImportStarUsed
    test_*.py ImportStarUsed
    test_*.py ImportStarUsage
    conftest.py UnusedVariable
    notebooks/* ALL
    fixtures/* ALL
    docs/_build ALL
spec_header_format = {class_name} ({path})
filterwarnings =
    once::UserWarning
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore::pytest.PytestDeprecationWarning
    ignore::FutureWarning

[flake8]
# match black maximum line length
max-line-length = 88
ignore =
    E266
    E226
per-file-ignores =
    __init__.py:F401
    test_*.py:F405,F403
    conftest.py:F841
    setup.py:E221
exclude =
    .git
    __pycache__
    build
    dist
    docs/conf.py